--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">aahelper</string>
+    <string name="app_name">AAhelp</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="_smyappname">AA小助手</string>
+    <string name="_sbottomtext">欢迎你使用AA分账</string>
+    <string name="title_activity_activity_frame">ActivityFrame</string>
 
 </resources>
