--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
         <item>新表单项目</item>
     </string-array>
     <string-array name="_ainituser">
-        <item>张三</item>
-        <item>张四</item>
+        <item>隔壁老王</item>
+        <item>村口老张</item>
     </string-array>
     <string-array name="_SQLiteDALclassName">
         <item>SQLiteDALuser</item>
