--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,9 +46,26 @@
 
     <string name="_sflag">消费</string>
    <string name="_sChildTypeCount">%s子类别</string>
+    <string name="_stypetitle">类别管理（%s）</string>
+    <string name="_stypehint">请输入类别名</string>
+    <string name="_stypetype">%s类别</string>
+    <string name="_sedittype">修改</string>
+    <string name="_saddtype">新增</string>
+    <string name="_snulltypename">类别名不能为空</string>
+    <string name="_sillegletypename">类别名不合法，必须为字母数字或者汉字</string>
+    <string name="_stypeisexist">类别名已存在</string>
+    <string name="_sdeletetype">删除类别</string>
+    <string name="_sdeletetypebutton">删除类别</string>
+    <string name="_sdeletetypetitle">删除类别%s</string>
+    <string name="_sedittypesuccess">修改类别成功</string>
+    <string name="_sinserttypesuccess">新增类别成功</string>
+    
     <string-array name="_amainlistmenu">
         <item>新表单项目</item>
         <item>用户管理</item>
+    </string-array>
+    <string-array name="_atypelistmenu">
+        <item>新建类别</item>
     </string-array>
     <string-array name="_ainituser">
         <item>隔壁老王</item>
