--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="_ssavebutton">保存</string>
+    <string name="_scancelbutton">取消</string>
 
     <string name="app_name">AAhelp</string>
     <string name="action_settings">Settings</string>
@@ -59,6 +61,10 @@
     <string name="_sdeletetypetitle">删除类别%s</string>
     <string name="_sedittypesuccess">修改类别成功</string>
     <string name="_sinserttypesuccess">新增类别成功</string>
+    <string name="_sdefaultselect">-请选择-</string>
+    <string name="_sfaile">保存失败</string>
+    <string name="_ssuccess">保存成功</string>
+
     
     <string-array name="_amainlistmenu">
         <item>新表单项目</item>
