--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,49 @@
     <string name="_sfaile">保存失败</string>
     <string name="_ssuccess">保存成功</string>
 
-    
+    <string name="_spayoutsave">保存支出</string>
+    <string name="_scancelpayout">取消保存</string>
+    <string name="_sselectbook">选择账本</string>
+    <string name="_ssetamount">支付总和</string>
+    <string name="_shintamount">请输入支付总和</string>
+    <string name="_sselecttype">选择类别</string>
+    <string name="_shinttype">请选择类别</string>
+    <string name="_spaydata">支付日期</string>
+    <string name="_spayouttype">支出类型</string>
+    <string name="_spayuser">选择用户</string>
+    <string name="_shintpayuser">请选择支付用户</string>
+    <string name="_shintcomment">请输入消费备注</string>
+    <string name="_spayouttotalmessage">共%1$s笔，合计消费%2$s</string>
+    <string name="_saddpayout">新增支出</string>
+    <string name="_seditpayout">修改支出</string>
+    <string name="_serroramount">总额必须为数字</string>
+    <string name="_snulltype">请选择消费类别</string>
+   <string name="_snulluser">请选择一位消费人</string>
+    <string name="_slessonuser">至少需要一位以上的消费人</string>
+    <string name="_snopayuser">请选择至少一位消费人</string>
+    <string name="_sback">返回</string>
+    <string name="_sselectpaytype">请选择消费类型</string>
+    <string name="_sselectuser">请选择消费人</string>
+
+    <string name="ButtonTextDot">.</string>
+    <string name="ButtonTextOne">1</string>
+    <string name="ButtonTextTwo">2</string>
+    <string name="ButtonTextThree">3</string>
+    <string name="ButtonTextFour">4</string>
+    <string name="ButtonTextFive">5</string>
+    <string name="ButtonTextSix">6</string>
+    <string name="ButtonTextSeven">7</string>
+    <string name="ButtonTextEight">8</string>
+    <string name="ButtonTextNine">9</string>
+    <string name="ButtonTextZero">0</string>
+    <string name="ButtonTextChange">更正</string>
+    <string name="ButtonTextOk">确定</string>
+
+    <string-array name="payouttype">
+        <item>均分</item>
+        <item>借贷</item>
+        <item>个人</item>
+    </string-array>
     <string-array name="_amainlistmenu">
         <item>新表单项目</item>
         <item>用户管理</item>
@@ -81,6 +123,8 @@
         <item>SQLiteDALuser</item>
         <item>SQLiteDALbook</item>
         <item>SQLiteDALtype</item>
+        <item>SQLiteDALcreateview</item>
+        <item>SQLiteDALpayout</item>
     </string-array>
     <string-array name="_abook">
         <item>日常开销</item>
