--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="_sdeleteusertitle">删除用户%s</string>
     <string name="_deletefail">抱歉，删除失败</string>
 
-    <string  name="_sischeckdefaultbook">是否设置为默认账本</string>
+    <string name="_sischeckdefaultbook">是否设置为默认账本</string>
     <string name="_silligledefaultbook">至少需要有一个默认账本</string>
     <string name="_sbookhint">请输入账本名</string>
     <string name="_sbooktype">%s账本</string>
@@ -47,7 +47,7 @@
     <string name="_sinsertbooksuccess">新增账本成功</string>
 
     <string name="_sflag">消费</string>
-   <string name="_sChildTypeCount">%s子类别</string>
+    <string name="_sChildTypeCount">%s子类别</string>
     <string name="_stypetitle">类别管理（%s）</string>
     <string name="_stypehint">请输入类别名</string>
     <string name="_stypetype">%s类别</string>
@@ -82,12 +82,15 @@
     <string name="_seditpayout">修改支出</string>
     <string name="_serroramount">总额必须为数字</string>
     <string name="_snulltype">请选择消费类别</string>
-   <string name="_snulluser">请选择一位消费人</string>
+    <string name="_snulluser">请选择一位消费人</string>
     <string name="_slessonuser">至少需要一位以上的消费人</string>
     <string name="_snopayuser">请选择至少一位消费人</string>
     <string name="_sback">返回</string>
     <string name="_sselectpaytype">请选择消费类型</string>
     <string name="_sselectuser">请选择消费人</string>
+    <string name="_spayouttitle">账本：%1$s共有%2$s笔消费</string>
+    <string name="_spayoutdelete">删除消费</string>
+    <string name="_sdeletepayout">删除</string>
 
     <string name="ButtonTextDot">.</string>
     <string name="ButtonTextOne">1</string>
@@ -123,8 +126,8 @@
         <item>SQLiteDALuser</item>
         <item>SQLiteDALbook</item>
         <item>SQLiteDALtype</item>
-        <item>SQLiteDALcreateview</item>
         <item>SQLiteDALpayout</item>
+        <item>SQLiteDALcreateview</item>
     </string-array>
     <string-array name="_abook">
         <item>日常开销</item>
@@ -132,5 +135,8 @@
     <string-array name="_atype">
         <item>吃饭</item>
         <item>网购</item>
+    </string-array>
+    <string-array name="_spayout">
+        <item>切换账本</item>
     </string-array>
 </resources>
